syntax = "proto2";

package bogame;

// Everything we know about a given account.
message Player {
  optional int64 timestamp = 1;
  optional Universe universe = 2;
  optional Identity identity = 3;
  optional Score score = 4;
  optional Officers officers = 5;
  optional Research research = 6;
  repeated Planet planets = 7;
}

message Universe {
  optional string name = 1;
  optional float speed = 2;
  optional float fleet_speed = 3;
  optional bool donut_galaxy = 4;
  optional bool donut_system = 5;
}

message Identity {
  optional int32 player_id = 1;
  optional string name = 2;
  optional int32 alliance_id = 3;
  optional string alliance_tag = 4;
  optional string alliance_name = 5;
}

message Score {
  optional int32 points = 1;
  optional int32 honorific_points = 2;
  optional int32 rank = 3;
  optional int32 num_players = 4;
}

message Officers {
  optional bool has_commander = 1;
  optional bool has_admiral = 2;
  optional bool has_engineer = 3;
  optional bool has_geologist = 4;
  optional bool has_technocrat = 5;
}

message Research {
  optional int32 energy = 1;
  optional int32 laser = 2;
  optional int32 ion = 3;
  optional int32 hyperspace = 4;
  optional int32 plasma = 5;
  optional int32 espionage = 6;
  optional int32 computer = 7;
  optional int32 astrophysics = 8;
  optional int32 intergalactic_network = 9;
  optional int32 graviton = 10;
  optional int32 combustion_drive = 11;
  optional int32 impulse_drive = 12;
  optional int32 hyperspace_drive = 13;
  optional int32 weapons = 14;
  optional int32 shielding = 15;
  optional int32 armor = 16;
}

message Planet {
  optional int32 id = 1;
  optional string name = 2;
  optional bool is_homeworld = 3;
  optional bool is_moon = 4;
  optional Coordinates coordinates = 5;
  optional int32 diameter_km = 6;
  optional int32 capacity = 7;
  optional int32 size = 8;
  optional float min_temperature = 9;
  optional float max_temperature = 10;
  optional Planet moon = 11;
  optional Resources resources = 12;
  optional Mines mines = 13;
  optional ProductionRates production_rates = 14;
  optional Facilities facilities = 15;
  optional Shipyard shipyard = 17;
  optional Defense defense = 18;
}

message Coordinates {
  optional int32 galaxy = 1;
  optional int32 system = 2;
  optional int32 position = 3;
}

message Resources {
  optional int32 metal = 1;
  optional int32 crystal = 2;
  optional int32 deuterium = 3;
  optional int32 energy = 4;
  optional int32 dark_matter = 5;
}

message Mines {
  optional int32 metal = 1;
  optional int32 crystal = 2;
  optional int32 deuterium = 3;
  optional int32 solar_plant = 4;
  optional int32 fusion_reactor = 5;
  optional int32 metal_storage = 6;
  optional int32 crystal_storage = 7;
  optional int32 deuterium_storage = 8;
}

message ProductionRates {
  optional float metal = 1;
  optional float crystal = 2;
  optional float deuterium = 3;
  optional float solar_plant = 4;
  optional float fusion_reactor = 5;
  optional float solar_satellites = 6;
}

message Facilities {
  optional int32 robotics_factory = 1;
  optional int32 shipyard = 2;
  optional int32 research_lab = 3;
  optional int32 alliance_depot = 4;
  optional int32 missile_silo = 5;
  optional int32 nanite_factory = 6;
  optional int32 terraformer = 7;
  optional int32 space_dock = 8;
  optional int32 lunar_base = 9;
  optional int32 sensor_phalanx = 10;
  optional int32 jump_gate = 11;
}

message Shipyard {
  optional int32 light_fighters = 1;
  optional int32 heavy_fighers = 2;
  optional int32 cruisers = 3;
  optional int32 battleships = 4;
  optional int32 battlecruisers = 5;
  optional int32 bombers = 6;
  optional int32 destroyers = 7;
  optional int32 deathstars = 8;
  optional int32 small_cargos = 9;
  optional int32 large_cargos = 10;
  optional int32 colony_ships = 11;
  optional int32 recyclers = 12;
  optional int32 espionage_probes = 13;
  optional int32 solar_satellites = 14;
}

message Defense {
  optional int32 rocker_launchers = 1;
  optional int32 light_lasers = 2;
  optional int32 heavy_lasers = 3;
  optional int32 gauss_canons = 4;
  optional int32 ion_canons = 5;
  optional int32 plasma_turrets = 6;
  optional bool has_small_shield_dome = 7;
  optional bool has_large_shield_dome = 8;
  optional int32 anti_ballistic_missiles = 9;
  optional int32 interplanetary_missiles = 10;
}
